--- a/app/src/main/res/layout/activity_actividad3.xml
+++ b/app/src/main/res/layout/activity_actividad3.xml
@@ -1,119 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
-    tools:context=".actividad_3">
+    tools:context=".actividad5">
 
-    <!-- Boton de Atrás-->
-
-    <Button
-        android:id="@+id/btn_atras_recetas"
-        android:layout_width="100dp"
+    <!-- Botón de retroceso -->
+    <ImageButton
+        android:id="@+id/btnRetrocederAnterior"
+        android:layout_width="48dp"
         android:layout_height="48dp"
+        android:src="@drawable/baseline_arrow_back_24"
         android:backgroundTint="#D52B1E"
-        android:text="Atrás"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.109"
-        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/volver_atras"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.052" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"/>
 
+    <!-- Anticucho de Pollo y Verduras -->
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvAnticuchoPolloVerduras"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Empanada de queso"
+        android:text="Anticucho de Pollo\ny Verduras"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/btn_atras_recetas"
+        app:layout_constraintTop_toBottomOf="@+id/btnRetrocederAnterior"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="24dp" />
 
-    <!-- Empanada de Queso -->
-
-    <!-- Empanada de Pino -->
-
-    <Button
-        android:id="@+id/btnEpanadaQueso"
-        android:layout_width="147dp"
-        android:layout_height="61dp"
-        android:backgroundTint="#D52B1E"
-        android:text="Ver receta"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+    <ImageButton
+        android:id="@+id/btnAnticuchoPolloVerduras"
+        android:layout_width="171dp"
+        android:layout_height="125dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/btn_anticucho"
+        android:background="@null"
+        app:layout_constraintTop_toBottomOf="@+id/tvAnticuchoPolloVerduras"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.28" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp" />
 
+    <!-- Costillar de Cerdo a la parrilla -->
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvCostillarCerdo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Empanada de pino"
+        android:text="Costillar de Cerdo\na la parrilla"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/btnEpanadaQueso"
+        app:layout_constraintTop_toBottomOf="@+id/btnAnticuchoPolloVerduras"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="24dp" />
 
-    <!-- Empanada de Marisco -->
-
-    <Button
-        android:id="@+id/btnEmpanadaPino"
-        android:layout_width="146dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="336dp"
-        android:backgroundTint="#D52B1E"
-        android:text="Ver receta"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+    <ImageButton
+        android:id="@+id/btnCostillarCerdo"
+        android:layout_width="159dp"
+        android:layout_height="109dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/btn_costillar"
+        android:background="@null"
+        app:layout_constraintTop_toBottomOf="@+id/tvCostillarCerdo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp" />
 
+    <!-- Pollo Asado al Limón -->
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvPolloAsadoLimon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Empanada de marisco"
+        android:text="Pollo Asado al Limón"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCostillarCerdo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEmpanadaPino" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp" />
 
-    <Button
-        android:id="@+id/btnEmpanadaMarisco"
-        android:layout_width="145dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="84dp"
-        android:backgroundTint="#D52B1E"
-        android:text="Ver receta"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+    <ImageButton
+        android:id="@+id/btnPolloAsadoLimon"
+        android:layout_width="139dp"
+        android:layout_height="152dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/btn_pollo"
+        android:background="@null"
+        app:layout_constraintTop_toBottomOf="@+id/tvPolloAsadoLimon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.701" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
