--- a/app/src/main/res/layout/activity_costillar_de_cerdo_parrilla.xml
+++ b/app/src/main/res/layout/activity_costillar_de_cerdo_parrilla.xml
@@ -2,87 +2,79 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
     tools:context=".CostillarDeCerdoParrilla">
 
-    <!-- Botón Atrás -->
-    <Button
-        android:id="@+id/btnVerParrilla2"
-        android:layout_width="102dp"
-        android:layout_height="43dp"
+    <ImageButton
+        android:id="@+id/btnAtrasCostillar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/baseline_arrow_back_24"
         android:backgroundTint="#D52B1E"
-        android:text="Atrás"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/volver_atras"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="20dp"/>
+
+    <TextView
+        android:id="@+id/tituloCostillar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/titulo_anticucho"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/btnAtrasCostillar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"/>
+
+
+    <ImageView
+        android:id="@+id/imgCostillar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/costillas_de_cerdo"
+        android:contentDescription="@string/titulo_costillar"
+        app:layout_constraintTop_toBottomOf="@id/tituloCostillar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <!-- Título -->
-    <TextView
-        android:id="@+id/textView30"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Costillar de Cerdo a la Parrilla"
-        android:textColor="@color/white"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/btnVerParrilla2"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/imgCostillar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="12dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp">
 
-    <!-- Imagen -->
-    <ImageView
-        android:id="@+id/imgAnticucho"
-        android:layout_width="165dp"
-        android:layout_height="204dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="16dp"
-        android:contentDescription="Imagen de costillar"
-        android:scaleType="centerCrop"
-        android:src="@drawable/costillas_de_cerdo"
-        app:layout_constraintTop_toBottomOf="@id/textView30"
-        app:layout_constraintStart_toStartOf="parent"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <!-- Ingredientes -->
-    <TextView
-        android:id="@+id/ingredientesCerdo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Ingredientes:\n - 1 kilo de costillar de cerdo\n \n Adobo:\n - 3 1/2 cucharadas de miel\n - 3 cucharadas de mostaza\n - 3 cucharadas de vinagre blanco\n - 1 1/2 cucharadita de Ají Color Gourmet\n - 1/2 cucharadita de Comino Molido Gourmet\n - 2 cucharadas de Orégano Entero Gourmet\n - 1 cucharadita de Pimienta Blanca Gourmet\n - 1 1/2 cucharadita de Sal de Mar Gourmet\n - 3/4 taza de vino blanco\n "
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:lineSpacingExtra="2dp"
-        app:layout_constraintTop_toBottomOf="@id/textView30"
-        app:layout_constraintStart_toEndOf="@id/imgAnticucho"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"/>
+            <TextView
+                android:id="@+id/ingredientesCostillar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/ingredientes_costillar"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
-    <!-- Preparación -->
-    <TextView
-        android:id="@+id/textView31"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Preparación:\n Mezclar todos los ingredientes del adobo en una fuente grande. Agregar el costillar y con las manos, embetunarlo por todos lados. Dejar reposar por al menos 2 horas antes de cocinarlo.\n\n Prender la parrilla y cuando esté caliente, sacar el costillar del adobo y ponerlo sobre la parrilla.\n\n Cocinar por ambos lados hasta que esté cocido al medio y dorado por ambos lados; alrededor de 45 minutos; se puede pincelar con el adobo mientras se cocina.\n\n Partir y servir acompañado de ensalada chilena."
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:lineSpacingExtra="3dp"
-        app:layout_constraintTop_toBottomOf="@id/imgAnticucho"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+            <TextView
+                android:id="@+id/preparacionCostillar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/preparacion_costillar"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="12dp"/>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
