--- a/app/src/main/res/layout/activity_empanada_de_queso.xml
+++ b/app/src/main/res/layout/activity_empanada_de_queso.xml
@@ -2,93 +2,79 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
-    tools:context=".EmpanadaDeQueso">
+    tools:context=".EmpanadaQueso">
 
-    <!-- Boton Atras -->
-    <Button
-        android:id="@+id/btnRecetasEmpanadas"
-        android:layout_width="102dp"
-        android:layout_height="43dp"
+    <ImageButton
+        android:id="@+id/btnAtrasQueso"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/baseline_arrow_back_24"
         android:backgroundTint="#D52B1E"
-        android:text="Atrás"
-        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/volver_atras"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"/>
+
+    <TextView
+        android:id="@+id/tituloEmpanadaQueso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/titulo_empanada_queso"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/btnAtrasQueso"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"/>
 
-    <!-- Titulo -->
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Empanada de Queso"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/btnRecetasEmpanadas"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
-
-    <!-- Imagen -->
     <ImageView
-        android:id="@+id/imgEmpanada"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:contentDescription="Imagen de empanada de queso"
-        android:scaleType="centerCrop"
+        android:id="@+id/imgEmpanadaQueso"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@drawable/empanada_de_queso"
-        app:layout_constraintTop_toBottomOf="@id/textView8"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <!-- Ingredientes -->
-    <TextView
-        android:id="@+id/IngredientesEQueso"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Ingredientes:\n - 1 kilo de harina\n - 120 gr de manteca o margarina\n - 1 cucharadita de Sal de Mar\n - 1 cucharadita de azúcar\n - 1 taza de leche\n - 1 taza de agua\n - 200 gr de queso mantecoso\n - Aceite"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/imgEmpanada"
-        app:layout_constraintStart_toEndOf="@id/imgEmpanada"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="20dp"/>
-
-    <!-- Texto "Preparación:" -->
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Preparación:"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/imgEmpanada"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
-
-    <!-- Preparación -->
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Preparar la masa: Mezclar harina con manteca, sal, azúcar y leche. Agregar agua poco a poco hasta formar una masa lisa. Amasar, tapar y dejar reposar 30 minutos.\n\nArmar las empanadas: Estirar la masa a 0,3 cm, cortar círculos de 10 cm, poner un cubo de queso al centro y cerrar en forma de media luna, sellando los bordes con un tenedor.\n\nFreír: Cocinar en aceite caliente hasta que estén doradas por ambos lados. Escurrir en papel absorbente.\n\nServir: Consumir de inmediato, opcionalmente espolvorear con azúcar flor."
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/textView10"
+        android:contentDescription="@string/titulo_empanada_queso"
+        app:layout_constraintTop_toBottomOf="@id/tituloEmpanadaQueso"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginTop="16dp"/>
 
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/imgEmpanadaQueso"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/ingredientesEmpanadaQueso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/ingredientes_empanada_queso"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/preparacionEmpanadaQueso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/preparacion_empanada_queso"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginTop="12dp"/>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
