--- a/app/src/main/res/layout/activity_empanada_marisco.xml
+++ b/app/src/main/res/layout/activity_empanada_marisco.xml
@@ -2,73 +2,79 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
     tools:context=".EmpanadaMarisco">
 
-    <Button
-        android:id="@+id/btnRecetasAnteriores"
-        android:layout_width="102dp"
-        android:layout_height="43dp"
+    <ImageButton
+        android:id="@+id/btnAtrasMarisco"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/baseline_arrow_back_24"
         android:backgroundTint="#D52B1E"
-        android:text="Atras"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        android:contentDescription="@string/volver_atras"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="30dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"/>
 
     <TextView
-        android:id="@+id/ingredientesEMarisco"
-        android:layout_width="197dp"
-        android:layout_height="267dp"
-        android:text="Ingredientes:\n - 2 tarros de mariscos surtidos en conserva\n - 1 cebolla cortada en cubitos\n - 1 cdta de Ají de Color Gourmet\n - 4 masas de empanadas\n - 1 cdta de Ajo en Polvo Gourmet\n - 1 huevo batido\n - 600 g de harina\n - 1 cucharadita de Sal de Mar Gourmet\n - 120 g de manteca vegetal (derretida y tibia)\n - 40 ml de vino blanco\n - Agua tibia\n "
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.919"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="164dp" />
-
-    <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tituloEmpanadaMarisco"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Empanada de Marisco"
+        android:text="@string/titulo_empanada_marisco"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintTop_toBottomOf="@id/btnAtrasMarisco"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="106dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="376dp"
-        android:layout_height="261dp"
-        android:layout_marginBottom="24dp"
-        android:text="Preparar la masa: Mezclar harina, sal y manteca hasta formar migas. Agregar vino y agua tibia poco a poco hasta tener una masa blanda pero no pegajosa. Amasar 5 minutos hasta que esté lisa y elástica. Reposar tapada. Estirar a 0,5 cm y cortar círculos de 15 cm.\n \n Preparar el relleno: Sofreír cebolla con ají de color y ajo en polvo. Agregar mariscos y cocinar 1 minuto más. Retirar del fuego.\n \n Armar las empanadas: Poner relleno al centro, doblar la masa y sellar los bordes. Pintar con huevo batido.\n \n Hornear: Cocinar a 180 °C por 25 minutos hasta que estén doradas.\n \n Servir: Consumir calientes.\n "
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold"
+    <ImageView
+        android:id="@+id/imgEmpanadaMarisco"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/empanada_marisco"
+        android:contentDescription="@string/titulo_empanada_marisco"
+        app:layout_constraintTop_toBottomOf="@id/tituloEmpanadaMarisco"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/imgEmpanadaMarisco"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_margin="16dp">
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Preparación:"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="409dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/ingredientesEmpanadaMarisco"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/ingredientes_empanada_marisco"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/preparacionEmpanadaMarisco"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/preparacion_empanada_marisco"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginTop="12dp"/>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
