--- a/app/src/main/res/layout/activity_mango_sour.xml
+++ b/app/src/main/res/layout/activity_mango_sour.xml
@@ -2,73 +2,70 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
     tools:context=".MangoSour">
 
-    <Button
-        android:id="@+id/btnTragoReceta"
-        android:layout_width="102dp"
-        android:layout_height="43dp"
+    <ImageButton
+        android:id="@+id/btnAtrasMangoSour"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/baseline_arrow_back_24"
         android:backgroundTint="#D52B1E"
-        android:text="Atras"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        android:contentDescription="@string/volver_atras"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="30dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"/>
 
     <TextView
-        android:id="@+id/ingredientesMangoSour"
-        android:layout_width="396dp"
-        android:layout_height="138dp"
-        android:text="Ingredientes:\n - 1 1/2 taza de jugo de mango preparado con pulpa\n - 2 tazas de pisco\n - 3/4 taza de azúcar granulada\n - 1 taza de hielo\n - Azúcar granulada para decorar las copas\n - Rodajas de naranja para decorar las copas (opcional)\n "
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="350dp" />
-
-    <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/tituloMangoSour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mango Sour"
+        android:text="@string/titulo_mango_sour"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintTop_toBottomOf="@id/btnAtrasMangoSour"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="87dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"/>
+
+    <ImageView
+        android:id="@+id/imgMangoSour"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/mango_sour"
+        android:contentDescription="@string/titulo_mango_sour"
+        app:layout_constraintTop_toBottomOf="@id/tituloMangoSour"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <TextView
-        android:id="@+id/textView26"
-        android:layout_width="357dp"
-        android:layout_height="177dp"
-        android:layout_marginBottom="24dp"
-        android:text="Poner todos los ingredientes en la juguera y batir por 1 minuto.\n \n En un plato poner azúcar. Mojar los bordes de una copa con agua y poner éstos sobre el azúcar.\n \n Servir el contenido de la juguera en cada una de las copas. Decorar cada copa con una rodaja de naranja.\n "
+        android:id="@+id/ingredientesMangoSour"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/ingredientes_mango_sour"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgMangoSour"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_margin="16dp"/>
 
     <TextView
-        android:id="@+id/textView27"
-        android:layout_width="wrap_content"
+        android:id="@+id/preparacionMangoSour"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Preparación:"
+        android:text="@string/preparacion_mango_sour"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.091"
+        app:layout_constraintTop_toBottomOf="@id/ingredientesMangoSour"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="495dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
