--- a/app/src/main/res/layout/activity_terremoto.xml
+++ b/app/src/main/res/layout/activity_terremoto.xml
@@ -2,71 +2,70 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
     tools:context=".Terremoto">
 
-    <Button
-        android:id="@+id/btnRecetasTragos"
-        android:layout_width="102dp"
-        android:layout_height="43dp"
+    <ImageButton
+        android:id="@+id/btnAtrasTerremoto"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/baseline_arrow_back_24"
         android:backgroundTint="#D52B1E"
-        android:text="Atras"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        android:contentDescription="@string/volver_atras"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="30dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"/>
 
     <TextView
-        android:id="@+id/ingredientesTerremoto"
+        android:id="@+id/tituloTerremoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ingredientes:\n - 700 ml de vino pipeño o blanco\n - 100 ml de granadina\n - 200 ml de helado de piña, más para servir\n - Opcional: chorrito de pisco\n "
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="353dp" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Terremoto"
+        android:text="@string/titulo_terremoto"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintTop_toBottomOf="@id/btnAtrasTerremoto"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="87dp" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="387dp"
-        android:layout_height="124dp"
-        android:layout_marginBottom="68dp"
-        android:text="Poner todos los ingredientes en una jarra y revolver hasta integrar.\n \n Agregar helado de piña en cada vaso, servir y disfrutar.\n "
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="20dp"/>
+
+    <ImageView
+        android:id="@+id/imgTerremoto"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/terremoto"
+        android:contentDescription="@string/titulo_terremoto"
+        app:layout_constraintTop_toBottomOf="@id/tituloTerremoto"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
+        android:id="@+id/ingredientesTerremoto"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Preparación:"
+        android:text="@string/ingredientes_terremoto"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.037"
+        app:layout_constraintTop_toBottomOf="@id/imgTerremoto"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="498dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
+
+    <TextView
+        android:id="@+id/preparacionTerremoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/preparacion_terremoto"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/ingredientesTerremoto"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
