--- a/app/src/main/res/layout/activity_empanadas_pino.xml
+++ b/app/src/main/res/layout/activity_empanadas_pino.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
-    tools:context=".EmpanadaPino">
+    tools:context=".EmpanadasDePino">
 
     <ImageButton
         android:id="@+id/btnRecetasAnteriores2"
