--- a/app/src/main/res/drawable/fondo_chile.xml
+++ b/app/src/main/res/drawable/fondo_chile.xml
@@ -5,6 +5,6 @@
     <gradient
         android:startColor="#C21B0E"
         android:centerColor="#D52B1E"
-        android:endColor="#650E08"
+        android:endColor="#4F0B05"
         android:angle="270"/>
 </shape>
